start working on better exceptions and cellDTO